syntax = "proto3";

option csharp_namespace = "GrpcServices";

package TradingService;

// The greeting service definition.
service TradingService {
  // Sends a greeting
  rpc SubmitOrder (OrderRequest) returns (OrderResponse);
}

// The request message containing the user's name.
message OrderRequest {
  uint quantity = 1;
  uint price = 2;
  uint side = 3;
  uint operation = 4;
}

// The response message containing the greetings.
message OrderResponse {
  bool status = 1;
}
