syntax = "proto3";

package trading;

message OrderRequest {
    int32 id = 1;
    uint32 quantity = 2;
    int64 price = 3;
    string type = 4;
    string side = 5;
    string operation = 6;
    string username = 7;
}

message OrderResponse {
    int32 id = 1;
    int32 status = 2;
    string message = 3;
}

service TradingService {
    rpc ProcessOrderAsync(OrderRequest) returns (OrderResponse);
}